[gd_scene load_steps=7 format=3 uid="uid://dv38t5whg55ee"]

[ext_resource type="Script" path="res://scripts/Screen Code/title_screen.gd" id="1_w4xhf"]
[ext_resource type="Texture2D" uid="uid://b6bw26g1hetog" path="res://Assets/Backgrounds/free-futuristic-abstract-background-87pdm-1684981114.jpg" id="2_i3grm"]
[ext_resource type="PackedScene" uid="uid://cf085neaei5xo" path="res://Screens/Options:Settings Menu/options_menu.tscn" id="2_jubf3"]
[ext_resource type="AudioStream" uid="uid://e1fc5n564lxs" path="res://Audio/Music/Horror Background Music For Films and Videos Free Download It s Not Safe Here YouTube.ogg" id="4_3osky"]

[sub_resource type="SystemFont" id="SystemFont_timmd"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_2ile3"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w4xhf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_i3grm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_timmd")
theme_override_font_sizes/font_size = 30
text = "Parallel
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Seperator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="start_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_2ile3")
theme_override_font_sizes/font_size = 24
text = "Start
"

[node name="settings_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_2ile3")
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="exit_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_2ile3")
theme_override_font_sizes/font_size = 24
text = "Exit"

[node name="Options_Menu" parent="." instance=ExtResource("2_jubf3")]
visible = false
layout_mode = 1

[node name="MusicStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3osky")
volume_db = 1.387
autoplay = true
bus = &"Music"
